5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1672_1950.log
== TEST (2019-04-28 16:10:40) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10 and v>4.8):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:10) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if((t>=-50) and (t<=10) and (v>4.8)):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if((t>=-50) and (t<=10) and (v>4.8)):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:11:42) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if((t>=-50) and (t<=10) and (v>4.8)):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if((t>=-50) and (t<=10) and (v>4.8)):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:12:16) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(("t">=-50) and ("t"<=10) and ("v">4.8)):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(("t">=-50) and ("t"<=10) and ("v">4.8)):
                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:12:54) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if("t">=-50 and "t"<=10 and "v">4.8):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if("t">=-50 and "t"<=10 and "v">4.8):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:13:25) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10 and v>4.8):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:13:35) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=(-50) and t<=10 and v>4.8):
	mensagem=j
	print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=(-50) and t<=10 and v>4.8):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:13) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
								 if(t>=-50 and t<=10 and v>4.8):
								 mensagem=j
								 print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:37) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10 and v>4.8):
		mensagem=j
		print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:15:43) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10 and v>4.8):
		mensagem=j
		print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:16:11) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10 and v>4.8):
		mensagem=j
		print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:20:02) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10 and v>4.8):
		mensagem=j
		print(round(mensagem,4))
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10 and v>4.8):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:20:20) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
if(t>=-50 and t<=10):
								 
								 

-- ERROR:
File "XXXX", line 5
    if(t>=-50 and t<=10):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:20:46) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
-- ERROR:
File "XXXX", line 5
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:20:51) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16)
-- ERROR:
File "XXXX", line 5
    
                                                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:21:14) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= (13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16))
-- ERROR:
File "XXXX", line 5
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:21:46) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= (13.12 + 0.6215 * t - (11.37 *(v**0.16) + (0.3965 * t * v**0.16))
-- ERROR:
File "XXXX", line 5
    
                                                                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:22:19) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * (t) - (11.37 *(v**0.16) + (0.3965 * t * (v)**0.16)
-- ERROR:
File "XXXX", line 5
    
                                                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:22:32) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= 13.12 + 0.6215 * (t) - (11.37 *(v)**0.16 + (0.3965 * t * (v)**0.16)
-- ERROR:
File "XXXX", line 5
    
                                                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:23:13) 
-- CODE:
s=float(input("Digite a sensação de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:23:41) 
-- CODE:
s=float(input("Digite a sensacao de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:24:45) 
-- CODE:
s=float(input("Digite a sensacao de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= "j"
	print(round("j",4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 16:27:43) 
-- CODE:
s=float(input("Digite a sensacao de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= "j"
	print(round("j",4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- EXECUTION TIME:
0.118878
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1672/1950/main.py", line 3, in <module>
    t=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:27:46) 
-- CODE:
s=float(input("Digite a sensacao de frio: "))
v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= "j"
	print(round("j",4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:28:54) 
-- CODE:

v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= "j"
	print(round("j",4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:29:16) 
-- CODE:

v=float(input("Digite a velocidade do vento: "))
t=float(input("Digite a temperatura do ar: "))
j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= j
	print(round("j",4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:29:59) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= j
	print(round("j",4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:30:38) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= j
	print(round(j,4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:31:01) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= j
	print(round(j,4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 16:31:28) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= j
	print(round(j,4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
	print(mensagem)
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:45:13) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t>=-50 and t<=10 and v>4.8):
	mensagem= j
	print(round(j,4))
elif(t<-50 and t>10):
	mensagem="Temperatura invalida"
	print(mensagem)
elif(v<=4.8):
	mensagem="Velocidade invalida"

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round("j",4))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:48:17) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t<=-50 and t>10):
	mensagem="Temperatura invalida"
	print(mensagem)
	elif(v<=4.8):
		mensagem="Velocidade invalida"
		print(mensagem)
	

-- ERROR:
File "XXXX", line 8
    elif(v<=4.8):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:48:27) 
-- CODE:
t=float(input("Digite a temperatura do ar: "))
v=float(input("Digite a velocidade do vento: "))

j= ((13.12 + 0.6215 * t) - (11.37 *(v)**0.16) + (0.3965 * t * (v)**0.16))
if(t<=-50 and t>10):
	mensagem="Temperatura invalida"
	print(mensagem)
elif(v<=4.8):
	mensagem="Velocidade invalida"
	print(mensagem)
	

-- ERROR:
File "XXXX", line 8
    elif(v<=4.8):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
